--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1908,6 +1908,8 @@ libncurses-dev:
       packages: [sys-libs/ncurses]
   macports: [ncurses]
   ubuntu: [libncurses5-dev]
+libnfc-dev:
+  ubuntu: [libnfc-dev]
 libnl-3:
   arch: [libnl]
   fedora: [libnl3]
